:bug: updata Cover Component  2021-05-22

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+ * @file: 
+ * @date: 2021-05-21 09:42
+ * @author: xuejie.he
+ * @lastModify: 2021-05-22 15:39
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,6 +16,7 @@
     <script src="public/main.js"></script>
   </head>
   <body>
+      
     <div id="app">
       <div>
         <h2 id="turn">It's <span id="player"></span>'s turn!</h2>
